# superclean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  protect.conf  pyproject.toml  services.conf  superclean.ps1  targets.conf
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: binary.yml  ci.yml  publish.yml
core/: common.ps1  memory.ps1  protect.ps1  report.ps1
levels/: brush.ps1  clean.ps1  wipe.ps1
packaging/: entry.py  superclean.spec
skills/clean/: SKILL.md
skills/report/: SKILL.md
src/superclean/: __init__.py  __main__.py  caches.py  clean.py  cli.py  config.py  gpu.py  ollama.py  orphans.py  perimeter.py  platform_backend.py  ports.py  procs.py  report.py  tempprune.py  util.py
src/superclean/backends/: posix.py  windows.py
tests/: test_clean.py  test_cli.py  test_config.py  test_core.py  test_gpu.py  test_last.py  test_ollama.py  test_orphans.py  test_ports.py  test_procs.py  test_reclaim.py  test_report_filters.py  test_report_hint.py  test_tempprune.py
tools/: demo.txt  make_demo_svg.py
windows/: install.ps1  superclean.ps1
windows/core/: common.ps1  ollama.ps1  orphans.ps1  protect.ps1  ram-mode.ps1  report.ps1
windows/levels/: dust.ps1  nuke.ps1  scrub.ps1  sweep.ps1  wipe.ps1
