[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superclean-cli"
dynamic = ["version"]
description = "Agentic-dev garbage collector: reclaims RAM, VRAM, and disk left behind by parallel dev work, without killing your active editors, terminals, or AI tools."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Albert Dobmeyer" }]
keywords = ["cleanup", "devops", "garbage-collector", "ram", "vram", "ollama", "cache", "agentic"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = ["psutil>=5.9"]

[project.urls]
Homepage = "https://github.com/albertdobmeyer/superclean"
Repository = "https://github.com/albertdobmeyer/superclean"

[project.scripts]
superclean = "superclean.cli:main"
superclean-cli = "superclean.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.version]
path = "src/superclean/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/superclean"]

# Bundle the PowerShell deep-clean backend and the example conf files into the
# wheel so `uvx superclean` works on a fresh Windows box with no extra steps.
[tool.hatch.build.targets.wheel.force-include]
"windows" = "superclean/_backend/windows"
"protect.conf" = "superclean/_backend/conf/protect.conf"
"targets.conf" = "superclean/_backend/conf/targets.conf"
"services.conf" = "superclean/_backend/conf/services.conf"

[tool.ruff]
line-length = 100
target-version = "py39"
